add control to get info

--- a/Note.org
+++ b/Note.org
@@ -1,6 +1,13 @@
 
 * todo
+  - データを読み込んでマークを付ける
+  - ×を置くアクションを設定
+  - mobile用の画面
+  - 画面サイズをレスポンシブにする
   - 12/8までにデモを作る
+
+* function
+  
 
 * reference
   
