--- a/Note.org
+++ b/Note.org
@@ -1,10 +1,11 @@
 
 * todo
-  - データを読み込んでマークを付ける
-  - ×を置くアクションを設定
-  - mobile用の画面
-  - 画面サイズをレスポンシブにする
-  - 12/8までにデモを作る
+** データを読み込んでマークを付ける
+** mobile用の画面
+** 画面のサイズに合わせて地図のサイズを決める
+** 画面サイズが変更されたら地図のサイズを変える
+** 12/8までにデモを作る
+** DONE ×を置くアクションを設定
 
 * function
   
