auto resize based on window size

--- a/Note.org
+++ b/Note.org
@@ -2,9 +2,9 @@
 * todo
 ** データを読み込んでマークを付ける
 ** mobile用の画面
-** 画面のサイズに合わせて地図のサイズを決める
-** 画面サイズが変更されたら地図のサイズを変える
 ** 12/8までにデモを作る
+** DONE 画面のサイズに合わせて地図のサイズを決める
+** DONE 画面サイズが変更されたら地図のサイズを変える
 ** DONE ×を置くアクションを設定
 
 * setup
