--- a/Note.org
+++ b/Note.org
@@ -1,17 +1,7 @@
 
 * todo
-** DONE AWSDの initializeで regionを取るようにする
-** reportには idを持たせるようにして、すでに置かれている idの reportは置かないようにする
-   updateを使えばよいか。
-   updateAllInfo()をする前は、マークを消すようにする
-
 ** item
    {"lon"=>"130.339675875853", "table"=>"2023/12/08 20:02:24", "application"=>"INFO", "lat"=>"33.5809082979102", "URL"=>"https://oishibucket.s3.ap-northeast-1.amazonaws.com/ScreenShot_20231208200219390.png"}
-
-** INFOの確認
-   重複していない？
-
-** ピンの削除機能
 
 ** serverから dynamoDBのデータの取得をスレッド化する。serverへのリクエストにはキャッシュしたデータで答える
 ** mobile用の画面
@@ -43,6 +33,15 @@ else
     	 --update-expression 'SET lat = :ok' \
     	 --expression-attribute-values '{":ok": {"N": "-800"}}'
 fi
+** DONE ピンの削除機能
+
+** DONE AWSDの initializeで regionを取るようにする
+** DONE reportには idを持たせるようにして、すでに置かれている idの reportは置かないようにする
+   updateを使えばよいか。
+   updateAllInfo()をする前は、マークを消すようにする
+
+** DONE INFOの確認
+   重複していても追記できた
 
 ** DONE 地図上で座標を取る機能を追加する
 
