--- a/Note.org
+++ b/Note.org
@@ -1,10 +1,5 @@
 
 * todo
-** item
-   {"lon"=>"130.339675875853", "table"=>"2023/12/08 20:02:24", "application"=>"INFO", "lat"=>"33.5809082979102", "URL"=>"https://oishibucket.s3.ap-northeast-1.amazonaws.com/ScreenShot_20231208200219390.png"}
-
-** serverから dynamoDBのデータの取得をスレッド化する。serverへのリクエストにはキャッシュしたデータで答える
-** mobile用の画面
 ** ルートを画面から切り替えられるようにする
 
 {"lon"=>0.0, "table"=>"oishi1", "application"=>"oishi1", "lat"=>-0.8e3}
@@ -33,6 +28,8 @@ else
     	 --update-expression 'SET lat = :ok' \
     	 --expression-attribute-values '{":ok": {"N": "-800"}}'
 fi
+** mobile用の画面
+** DONE serverから dynamoDBのデータの取得をスレッド化する。serverへのリクエストにはキャッシュしたデータで答える
 ** DONE ピンの削除機能
 
 ** DONE AWSDの initializeで regionを取るようにする
