add route selection

--- a/Note.org
+++ b/Note.org
@@ -1,6 +1,11 @@
 
 * todo
-** ルートを画面から切り替えられるようにする
+** report
+・すでに表示されているピンは追加で表示しない
+・サーバでは 2秒おきに dynamodbから情報を取得し、地図はサーバから毎秒情報を取得 (複数ユーザの同時利用に対応)
+・ルート選択のボタンを追加。選択後に "send route"を押すと Oishi2が更新される
+
+** DONE ルートを画面から切り替えられるようにする
 
 {"lon"=>0.0, "table"=>"oishi1", "application"=>"oishi1", "lat"=>-0.8e3}
 {"lon"=>0.0, "table"=>"oishi2", "application"=>"oishi2", "lat"=>0.0}
