show only recent reports

--- a/Note.org
+++ b/Note.org
@@ -1,5 +1,11 @@
 
 * todo
+** GOING 見るだけの地図サイトを用意する：mobile.html
+*** DONE 最初の一回だけ読み込むようにする
+    指定した時間以降のものだけを使う
+*** 座標をもらう
+    パラメータ
+    map.html?lat=xxxx&lon=yyyy
 ** 避難者位置のリアルタイム表示
    - 軌跡は無しで
    - 点を表示
@@ -9,13 +15,6 @@
 ** open streetmapで、もっと寄れるか確認する
    最大の解像度は同じだった
 
-
-** 見るだけの地図サイトを用意する
-   - 最初の一回だけ読み込むようにする
-   - 座標をもらう
-     パラメータ
-     map.html?lat=xxxx&lon=yyyy
-** モバイル用地図を作る
 ** https化する？
 
 ** 地図画面にピンを追加
