show current position on mobile.html

--- a/Note.org
+++ b/Note.org
@@ -1,13 +1,16 @@
 
 * todo
+** GOING スマホから位置情報をもらって、現在位置を表示しつつセンタリング
+   取れなかったらどうする？
+** ハザードマップの重畳
+   地理院がタイルを共有できるようにしている
+   https://disaportal.gsi.go.jp/hazardmapportal/hazardmap/copyright/opendata.html#tsunami
 ** 避難者位置のリアルタイム表示
    - 軌跡は無しで
    - 点を表示
    - 1分過ぎたものは消す(アクティブなものだけを表示)
-
 ** 人が動いた様子を後で再生できるようにする
-
-** https化する？
+** https化する
 
 ** 地図画面にピンを追加
    電話で情報が来たときに情報を集約できるように
