--- a/Note.org
+++ b/Note.org
@@ -15,7 +15,7 @@
 
 * todo
 ** DONE 避難者位置のリアルタイム表示
-   - 2023/12/13 13:23
+   - テスト用の日付：2023/12/13 13:23
    - 軌跡は無しで
    - 点を表示
    - 1分過ぎたものは消す(アクティブなものだけを表示)
