change format of starting time for trace

--- a/Note.org
+++ b/Note.org
@@ -14,6 +14,14 @@
 
 
 * todo
+** mobileの方で拡大できるように
+** 軌跡を残すように
+** SessionIDによって出力をし分ける
+** reportは、古い順に出す
+** mobile上で reportは全部出す: 設定でよい
+** mobile: ボタンを右下に
+** mouseoverで 人の最新の位置情報とタイムスタンプを出す
+** 倍速設定も画面におく
 ** DONE 避難者位置のリアルタイム表示
    - テスト用の日付：2023/12/13 13:23
    - 軌跡は無しで
