--- a/Note.org
+++ b/Note.org
@@ -15,18 +15,15 @@
   軌跡のテスト用の日付：2023/12/13 13:23
 
 * todo
-** 土砂の情報を載せる
 ** 凡例を載せる
-   →mobile
-** mobileにもハンバーガーをのる
-   - default: on
-   - 凡例も載せる：ハンバーガーの中に
+** mobileにもハンバーガーをのせる
 ** 軌跡を残すように
 ** SessionIDによって出力をし分ける
 ** reportは、古い順に出す
 ** mouseoverで 人の最新の位置情報とタイムスタンプを出す
 ** 倍速設定も画面におく
 ** ハザードマップボタンを作る？
+** DONE 土砂の情報を載せる
 ** DONE mobile: ボタンを右下に
 ** 地図上にルートを描けるように
 *** マウス
@@ -37,7 +34,6 @@
 *** タブレット上のペン入力
 ** DONE mobile上で reportは全部出す: 設定でよい
 ** DONE mobileの方で拡大できるように
-** ------------------------------
 ** DONE 人が動いた様子を後で再生できるようにする
 ** DONE 避難者位置のリアルタイム表示
    - 軌跡は無しで
