show map conroller on mobile too

--- a/Note.org
+++ b/Note.org
@@ -15,13 +15,13 @@
   軌跡のテスト用の日付：2023/12/13 13:23
 
 * todo
-** mobileにもハンバーガーをのせる
 ** 軌跡を残すように
 ** SessionIDによって出力をし分ける
 ** reportは、古い順に出す
 ** mouseoverで 人の最新の位置情報とタイムスタンプを出す
 ** 倍速設定も画面におく
-** ハザードマップボタンを作る？
+** DONE ハザードマップボタンを作る？
+** DONE mobileにもハンバーガーをのせる
 ** DONE 凡例を載せる
 ** DONE 土砂の情報を載せる
 ** DONE mobile: ボタンを右下に
