--- a/Note.org
+++ b/Note.org
@@ -16,10 +16,10 @@
 
 * todo
 ** 軌跡を残すように
+** mouseoverで 人の最新の位置情報とタイムスタンプを出す
 ** SessionIDによって出力をし分ける
 ** reportは、古い順に出す
-** mouseoverで 人の最新の位置情報とタイムスタンプを出す
-** 倍速設定も画面におく
+** DONE 倍速設定も画面におく
 ** DONE ハザードマップボタンを作る？
 ** DONE mobileにもハンバーガーをのせる
 ** DONE 凡例を載せる
