don't show Dosya overlays

--- a/Note.org
+++ b/Note.org
@@ -15,8 +15,14 @@
   軌跡のテスト用の日付：2023/12/13 13:23
 
 * todo
-** ------------------------------
+** 変数で sessionIDをもらい、自分の軌跡を出力する
+** trace リアルタイムは 5秒おき。
+** 1分以上切れたら、色がグレーに変わる。足跡も。
+** trace 過去のデータも一気にとって、倍速で表示する
 ** SessionIDによって出力をし分ける
+** PENDING モバイルで他の人の情報も出す
+** ------------------------------
+** DONE 今回は津波だけ出す。土砂は無し
 ** 地図上にルートを描けるように
 *** マウス
    https://leaflet.github.io/Leaflet.draw/docs/leaflet-draw-latest.html
