turn gray old icons. not completed yet.

--- a/Note.org
+++ b/Note.org
@@ -17,12 +17,12 @@
 * todo
 ** 変数で sessionIDをもらい、自分の軌跡を出力する
 ** trace リアルタイムは 5秒おき。
-** 1分以上切れたら、色がグレーに変わる。足跡も。
+** GOING 1分以上切れたら、色がグレーに変わる。足跡も。
+*** traceは、ある人の最新の情報が来続けるので、もう動いていない人のアイコンが増え続ける。
 ** trace 過去のデータも一気にとって、倍速で表示する
 ** SessionIDによって出力をし分ける
 ** PENDING モバイルで他の人の情報も出す
 ** ------------------------------
-** DONE 今回は津波だけ出す。土砂は無し
 ** 地図上にルートを描けるように
 *** マウス
    https://leaflet.github.io/Leaflet.draw/docs/leaflet-draw-latest.html
@@ -32,6 +32,7 @@
 *** タブレット上のペン入力
 ** 地図画面にピンを追加
    電話で情報が来たときに情報を集約できるように
+** DONE 今回は津波だけ出す。土砂は無し
 ** DONE reportは、古い順に出す
 ** DONE 軌跡を残すように
 ** DONE mouseoverで 人の最新の位置情報とタイムスタンプを出す
