implemented playback mode. And gray out old traces.

--- a/Note.org
+++ b/Note.org
@@ -16,13 +16,12 @@
 
 * todo
 ** 変数で sessionIDをもらい、自分の軌跡を出力する
-** trace リアルタイムは 5秒おき。
-** GOING 1分以上切れたら、色がグレーに変わる。足跡も。
-*** traceは、ある人の最新の情報が来続けるので、もう動いていない人のアイコンが増え続ける。
-** trace 過去のデータも一気にとって、倍速で表示する
 ** SessionIDによって出力をし分ける
 ** PENDING モバイルで他の人の情報も出す
 ** ------------------------------
+** DONE trace リアルタイムは 5秒おき。
+** DONE trace 過去のデータも一気にとって、倍速で表示する
+** DONE 1分以上切れたら、色がグレーに変わる。足跡も。
 ** 地図上にルートを描けるように
 *** マウス
    https://leaflet.github.io/Leaflet.draw/docs/leaflet-draw-latest.html
