debug: sort overlap of icon based on time

--- a/Note.org
+++ b/Note.org
@@ -15,10 +15,15 @@
   軌跡のテスト用の日付：2023/12/13 13:23
 
 * todo
+** 交差点に迂回ボタンを置き、ルート変更できるようにする。
+   障害物は、左から 1〜6
+
 ** 変数で sessionIDをもらい、自分の軌跡を出力する
 ** SessionIDによって出力をし分ける
 ** PENDING モバイルで他の人の情報も出す
 ** ------------------------------
+** DONE 灰色が上に来ることがある
+   updateした後に、新しいアイコンを置くようにする
 ** DONE trace リアルタイムは 5秒おき。
 ** DONE trace 過去のデータも一気にとって、倍速で表示する
 ** DONE 1分以上切れたら、色がグレーに変わる。足跡も。
