--- a/Note.org
+++ b/Note.org
@@ -15,13 +15,14 @@
   軌跡のテスト用の日付：2023/12/13 13:23
 
 * todo
-** GOING 交差点に迂回ボタンを置き、ルート変更できるようにする。
-   障害物は、左から 1〜6
-
+** 全部の道に矢印を？
 ** 変数で sessionIDをもらい、自分の軌跡を出力する
 ** SessionIDによって出力をし分ける
 ** PENDING モバイルで他の人の情報も出す
 ** ------------------------------
+** DONE 2vの開始を 1ブロック前から
+** DONE 交差点に迂回ボタンを置き、ルート変更できるようにする。
+   障害物は、左から 1〜6
 ** DONE 灰色が上に来ることがある
    updateした後に、新しいアイコンを置くようにする
 ** DONE trace リアルタイムは 5秒おき。
