--- a/Note.org
+++ b/Note.org
@@ -15,21 +15,17 @@
   軌跡のテスト用の日付：2023/12/13 13:23
 
 * todo
-** GOING 変数で sessionIDをもらい、自分の軌跡を出力する
-   http://localhost/~tetsu/evacguide/mobile.html?lat=33.58083928267066&lon=130.33965915441516&sid=SessionID20231213132218730
-
-   http://localhost/~tetsu/evacguide/mobile.html?lat=33.5808303&lon=130.340
-
 ** 再生したときは、投稿を一度消して、reportも投稿された時間で出す
-
-** map.js, map_onhm.jsで、put traceにも zindexを設定する
-
 ** 再生するときに矢印の変化も見せたい
 ** 交差点にダミーの数字を置く
 ** 矢印の色を薄く(透明化)、細く？
 ** 全部の道に矢印を？
+** GOING 変数で sessionIDをもらい、自分の軌跡を出力する
+   http://localhost/~tetsu/evacguide/mobile.html?lat=33.58083928267066&lon=130.33965915441516&sid=SessionID20231213132218730
+
+   http://localhost/~tetsu/evacguide/mobile.html?lat=33.5808303&lon=130.340
 ** PENDING モバイルで他の人の情報も出す
-** ------------------------------
+** DONE map.js, map_onhm.jsで、put traceにも zindexを設定する
 ** DONE 2vの開始を 1ブロック前から
 ** DONE 交差点に迂回ボタンを置き、ルート変更できるようにする。
    障害物は、左から 1〜6
