load arrow directions from DB, and initialize arrows.

--- a/Note.org
+++ b/Note.org
@@ -20,7 +20,6 @@
   軌跡のテスト用の日付：2023/12/13 13:23
 
 * todo
-** 矢印はDBから取る
 ** 迂回の矢印を入れる
 
 ** 交差点にダミーの数字を置く
@@ -31,6 +30,7 @@
 
    http://localhost/~tetsu/evacguide/mobile.html?lat=33.5808303&lon=130.340
 ** PENDING モバイルで他の人の情報も出す
+** DONE 矢印はDBから取る
 ** DONE 人よりもレポートを上に置く
 ** DONE 緯度に、緯度軽度時間がカンマ区切りで入る。
 ** DONE 再生するときに矢印の変化も見せたい
