--- a/Note.org
+++ b/Note.org
@@ -20,8 +20,6 @@
   軌跡のテスト用の日付：2023/12/13 13:23
 
 * todo
-** 迂回の矢印を入れる
-
 ** 交差点にダミーの数字を置く
 ** 矢印の色を薄く(透明化)、細く？
 ** 全部の道に矢印を？
@@ -30,6 +28,7 @@
 
    http://localhost/~tetsu/evacguide/mobile.html?lat=33.5808303&lon=130.340
 ** PENDING モバイルで他の人の情報も出す
+** DONE 迂回の矢印を入れる
 ** DONE 矢印はDBから取る
 ** DONE 人よりもレポートを上に置く
 ** DONE 緯度に、緯度軽度時間がカンマ区切りで入る。
