show the number of active users

--- a/Note.org
+++ b/Note.org
@@ -20,9 +20,6 @@
   軌跡のテスト用の日付：2023/12/13 13:23
 
 * todo
-** 青色のユニークな人数を表示する
-** 青からグレーになるまでの時間をパラメータ化する
-
 ** GOING APKファイルを起き QRコードを作る
    https://digital-bosai.net/package/latest.apk
 
@@ -38,6 +35,8 @@
 ** PENDING 各交差点にダミーの数字を置く
 ** PENDING 全部の道に矢印を？
 ** PENDING モバイルで他の人の情報も出す
+** DONE 青色のユニークな人数を表示する
+** DONE 青からグレーになるまでの時間をパラメータ化する
 ** DONE 小名浜の新しい矢印に対応
 ** DONE 矢印の色を薄く(透明化)、細く？
 ** DONE ポップアップする写真のサイズを調整
