remove old markers

--- a/Note.org
+++ b/Note.org
@@ -24,10 +24,8 @@
 
 
 * todo
-** リアルタイムの軌跡は間引く
-
-** リアルタイムの軌跡で古いものは表示しない
-
+** DONE playbackの軌跡は間引き、古いものは表示しない
+** DONE リアルタイムの軌跡は間引き、古いものは表示しない
 ** 時計が今より時間がかかってたら、時間を飛ばす？
 
 ** PENDING 各交差点にダミーの数字を置く
